# jomiel-client-demos

./: .clang-format  .pre-commit-config.yaml  README.md  docker-compose.yaml
c/: CMakeLists.txt  README.md
c/docker/alpine/: Dockerfile
c/docker/buster/: Dockerfile
c/src/demo/: jomiel.c  jomiel.h  jomiel_util.c  jomiel_util.h  main.c  options.c  options.h  types.h
cpp/: CMakeLists.txt  README.md  conanfile.txt
cpp/cmake/: CMakeLists.txt
cpp/docker/alpine/: Dockerfile
cpp/docker/buster/: Dockerfile
cpp/docker/pre-conan/alpine/: Dockerfile
cpp/docker/pre-conan/buster/: Dockerfile
cpp/src/demo/: jomiel.cpp  jomiel.h  main.cpp  types.h  usage.cpp
csharp/: README.md  demo.exe.config  log4net.config  paket.dependencies  paket.references  premake5.lua
csharp/docker/: Dockerfile
csharp/docker/buster/: Dockerfile
csharp/docker/debian/: Dockerfile
csharp/src/: Jomiel.cs  app.cs  demo.cs  jomiel.cs  runner.cs
golang/: README.md  go.mod  go.sum  main.go
golang/docker/alpine/: Dockerfile
golang/docker/buster/: Dockerfile
golang/docker/debian/: Dockerfile
golang/internal/app/: jomiel.go  main.go  options.go  runner.go
golang/src/jomiel.github.io/demo/: main.go
golang/src/jomiel.github.io/demo/examples/: jomiel.go  options.go
golang/src/jomiel.github.io/demo/golang/: jomiel.go  options.go
golang/tools/: gen-clean
java/: .gitignore  README.md  build.gradle  build.gradle.kts  pom.xml  settings.gradle  settings.gradle.kts
java/docker/: Dockerfile
java/docker/gradle/: Dockerfile
java/docker/maven/: Dockerfile
java/src/main/java/io/github/jomiel/examples/: Demo.java  Jomiel.java  Options.java
java/src/main/java/jomiel/client/demos/: App.java  Jomiel.java  Runner.java
java/src/main/java/jomiel/examples/: App.java  Jomiel.java  Options.java  Runner.java
java/src/main/resources/: tinylog.properties
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/docker/alpine/: Dockerfile
kotlin/docker/buster/: Dockerfile
kotlin/docker/debian/: Dockerfile
kotlin/src/main/kotlin/jomiel/client/demos/: App.kt  Jomiel.kt  Runner.kt
kotlin/src/main/kotlin/jomiel/examples/: App.kt  Jomiel.kt  Options.kt  Runner.kt
lua5/: README.md  demo-0.1.0-1.rockspec
lua5/docker/alpine/: Dockerfile
lua5/docker/buster/: Dockerfile
lua5/lib/demo/: jomiel.lua
lua5/src/: demo.lua
lua5/src/demo/: jomiel.lua  options.lua  runner.lua
nodejs/: .eslintrc.json  README.md  demo  index.js  package.json  pnpm-lock.yaml
nodejs/docker/: Dockerfile
nodejs/docker/alpine/: Dockerfile
nodejs/lib/: jomiel.js
nodejs/src/: index.js  jomiel.js  main.js  options.js  runner.js
perl5/: .perlcriticrc  .perltidyrc  README.md  cpanfile  cpanfile.snapshot
perl5/docker/: Dockerfile
perl5/docker/buster/: Dockerfile
perl5/docker/debian/: Dockerfile
perl5/lib/: Jomiel.pm
perl5/src/Demo/: Jomiel.pm  Options.pm  Runner.pm
php/: .phplint.yml  README.md  composer.json  package.json
php/docker/: Notes.md
php/docker/php7/alpine/: Dockerfile
php/docker/php8/alpine/: Dockerfile
php/lib/: Options.php
php/src/demo/: jomiel.php  options.php  runner.php  util.php
php7/: README.md  composer.json  package.json
php7/docker/: Dockerfile
php7/lib/: Jomiel.php  Logger.php  Options.php
python3/: README.md  pyproject.toml  requirements.txt  setup.cfg
python3/demo/: __init__.py  __main__.py  app.py  jomiel.py  options.py
python3/demo/jomiel/: __init__.py
python3/docker/alpine/: Dockerfile
python3/docker/buster/: Dockerfile
python3/docker/debian/: Dockerfile
python3/src/demo/: __main__.py  jomiel.py  log.py  options.py  runner.py
qt/: CMakeLists.txt  README.md
qt/docker/buster/: Dockerfile
qt/patches/: 0001-nzmqt.hpp-impl.hpp-fix-ensure-compilation-with-more-.patch
qt/src/: DemoAppWindow  DemoMainWindow  main.cpp
qt/src/demo/: appwindow.cpp  appwindow.h  mainwidget.cpp  mainwindow.h
rest-api/express/: .eslintrc.json  README.md  package.json  pnpm-lock.yaml
rest-api/express/rest/: demo.rest
rest-api/express/src/: config.js  handler.js  index.js  jomiel.js
rest-api/express/src/controllers/: inquiry.js
rest-api/express/src/helpers/: jomiel.js
rest-api/express/src/middlewares/: error.js  http404.js
rest-api/express/src/routes/: inquiry.js
restful/express/: .env  .eslintrc.json  package.json  pnpm-lock.yaml
restful/express/src/: app.js  config.js  index.js  jomiel.js
restful/express/src/controllers/: by-url.js  yt.js
restful/express/src/helpers/: error.js  jomiel.js
restful/express/src/middlewares/: error.js
restful/express/src/tests/: by-url-api.test.js  test-helper.js  yt-api.test.js
ruby/: .rubocop.yml  Gemfile  README.md  package.json
ruby/docker/alpine/: Dockerfile
ruby/docker/buster/: Dockerfile
ruby/lib/: Jomiel.rb  jomiel.rb
ruby/src/: jomiel.rb  runner.rb  usage.rb
rust/: Cargo.toml  README.md  build.rs
rust/docker/buster/: Dockerfile
rust/docker/debian/: Dockerfile
rust/src/: demo.rs  jomiel.rs  main.rs  options.rs  proto.rs
rust/src/demo/: jomiel.rs  options.rs  runner.rs
rust/src/proto/: mod.rs
scala/: README.md  build.gradle.kts
scala/docker/alpine/: Dockerfile
scala/docker/buster/: Dockerfile
scala/docker/debian/: Dockerfile
scala/src/main/scala/jomiel/examples/: App.scala  Jomiel.scala  Options.scala  Runner.scala
tools/cmake/: BootstrapProtoGen.cmake  BuildWithDocker.cmake  InvokeProtoc.cmake
