# -*- coding: utf-8 -*-
#
# jomiel-examples
#
# Copyright
#  2019-2021 Toni Gündoğdu
#
#
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "demo"
version = "0.1.0"
edition = "2018"

# Specifying the deps:
#   https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
#
# Creates:
#   https://crates.io/

[dependencies]
# protobuf = { git = "https://github.com/stepancheg/rust-protobuf.git", branch = "master" }
protobuf = "^2.22"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = { version = "^1.0" }
serde_yaml = "^0.8"
serde_json = "^1.0"
structopt = "^0.3"
zmq = "^0.9"

[build-dependencies]
# protoc-rust = { git = "https://github.com/stepancheg/rust-protobuf.git", branch = "master" }
protoc-rust = "^2.22"
glob = "^0.3"

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]
