# -*- coding: utf-8 -*-
#
# jomiel-client-demos
#
# Copyright
#  2019-2021,2025 Toni Gündoğdu
#
#
# SPDX-License-Identifier: Apache-2.0
#
[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zmq = "0.10"

[build-dependencies]
prost-build = "0.14"
glob = "0.3"
